<resources>
    <string name="hello">Through the button below, you can always use or off the Ripple Lock Screen.\10 Click the below button，start ripple lock，then enter the lock screen(click power button)，enjoy the ripple lock screen. \10PS:The first time of unlock screen, there will be some time delay. \10If you have found bug, Please email to me, I will fix the bug as soon as possible.</string>
    <string name="app_name">Ripple Lock</string>
    <string name="toast_start_lockscreen">Ripple Lock is opened.</string>
    <string name="toast_stop_lockscreen">Ripple Lock is stopped.</string>
    <string name="start_lockscreen">START</string>
    <string name="stop_lockscreen">STOP</string>
    <string name="settings">Settings</string>
    <string name="emergency_calls_only">Emergency calls only</string>
    <string name="lockscreen_emergency_call">Emergency call</string>
    <string name="lockscreen_return_to_call">Return to call</string>
    <string name="lockscreen_carrier_default">(No service)</string>
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
    <string name="lockscreen_charged">Charged.</string>
    <string name="lockscreen_current_battery">Battery (%d%%)</string>
    <string name="lockscreen_plugged_in">Charging (%d%%)</string>
    <string name="lockscreen_low_battery">Connect your charger.</string>
    <string name="lockscreen_sim_network_subset_locked_message">Phone is SIM Network Subset locked</string>
    <string name="lockscreen_sim_corporate_locked_message">Phone is SIM Corporate locked</string>
    <string name="lockscreen_sim_service_provider_locked_message">Phone is SIM Service Provider locked</string>
    <string name="lockscreen_sim_sim_locked_message">Phone is SIM locked</string>
    <string name="lockscreen_ruim_network1_locked_message">Phone is RUIM Network1 locked</string>
    <string name="lockscreen_ruim_network2_locked_message">Phone is RUIM Network2 locked</string>
    <string name="lockscreen_ruim_hrpd_locked_message">Phone is RUIM hrpd locked</string>
    <string name="lockscreen_ruim_corporate_locked_message">Phone is RUIM Corporate locked</string>
    <string name="lockscreen_ruim_service_provider_locked_message">Phone is RUIM Service Provider locked</string>
    <string name="lockscreen_ruim_ruim_locked_message">Phone is RUIM locked</string>
    <string name="lockscreen_instructions_when_pattern_disabled">Press Menu to unlock.</string>
    <string name="lockscreen_sim_puk_locked_message">SIM card is PUK-locked.</string>
    <string name="lockscreen_sim_puk_locked_instructions">PIN1 Blocked. Enter PUK1.\10or\10Please see the User Guide/contact Customer Care.</string>
    <string name="lockscreen_pin_locked_message">SIM/RUIM card is locked.</string>
    <string name="lockscreen_sim_unlock_progress_dialog_message">Unlocking SIM card…</string>
    <string name="lockscreen_sim_pin_blocked">PIN1 Blocked! Enter PUK1 to unblock PIN1.</string>
    <string name="lockscreen_ruim_pin_blocked">PIN1 Blocked! Enter PUK1 to unblock PIN1.</string>
    <string name="lockscreen_ruim_error_message_short">Invalid Card.</string>
    <string name="lockscreen_ruim_error_message">RUIM card is Invalid.</string>
    <string name="lockscreen_missing_ruim_message_short">No RUIM card.</string>
    <string name="lockscreen_missing_ruim_message">No RUIM card in phone.</string>
    <string name="lockscreen_missing_ruim_instructions">Please insert a RUIM card.</string>
    <string name="lockscreen_ruim_network_locked_message">Network locked</string>
    <string name="lockscreen_ruim_puk_locked_message">RUIM card is PUK-locked.</string>
    <string name="lockscreen_ruim_puk_locked_instructions">PIN1 Blocked. Enter PUK1 to unblock PIN1.\10OR\10Please see the User Guideontact Customer Care.</string>
    <string name="lockscreen_too_many_failed_attempts_dialog_message">You have incorrectly drawn your unlock pattern %d times. \10\10Please try again in %d seconds.</string>
    <string name="lockscreen_missing_sim_message_short">No SIM card.</string>
    <string name="lockscreen_missing_sim_message">No SIM card in phone.</string>
    <string name="lockscreen_missing_sim_instructions">Please insert a SIM card.</string>
    <string name="lockscreen_sim_error_message_short">Invalid Card.</string>
    <string name="lockscreen_sim_error_message">SIM card is Invalid.</string>
    <string name="lockscreen_instructions_when_pattern_enabled">Press Menu to unlock or place emergency call.</string>
    <string name="lockscreen_sim_network_locked_message">Phone is SIM Network locked</string>
    <string name="always_display_battery">Always display battery</string>
    <string name="font_setting">Font setting</string>
    <string name="font_style">Font Style</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_setting">Font size setting</string>
    <string name="time_size">Time font size</string>
    <string name="am_size">am/pm font size</string>
    <string name="date_size">Date font size</string>
    <string name="status_size">Status font size</string>
    <string name="carrier_size">Carrier font size</string>
    <string name="screen_adapt">Screen adaptive</string>
    <string name="font_color">Font Color</string>
    <string name="default_color_value">#ffffffff</string>
    <string name="default_color">Default color</string>
    <string name="time_color">Time font color</string>
    <string name="am_color">AM/PM font color</string>
    <string name="date_color">Date font color</string>
    <string name="status_color">Status font color</string>
    <string name="carrier_color">Carrier font color</string>
    <string name="background_setting">Background Setting</string>
    <string name="background_setting_summary">Set lock screen background image</string>
    <string name="other_setting">Other settings</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="auto_rotate">Auto Rotate</string>
    <string name="fix_horizontal">Fix horizontal</string>
    <string name="fix_vertical">Fix vertical</string>
    <string name="display_carrier">Display Carrier</string>
    <string name="display_lock_icon">Display lock icon</string>
    <string name="unlock_anim">Unlock animation</string>
    <string name="display_statusbar">Display status bar</string>
    <string name="can_not_disable_home">Warning!After remove status bar, can not prevent home button unlock.</string>
    <string name="disable_statusbar">Disable status bar expand</string>
    <string name="unlock_vibrate">Unlock vibrate</string>
    <string name="insert_sd">Please insert SD card,in order to generate regist file.</string>
    <string name="buy_app">Download charge version</string>
    <string name="download_site">https://market.android.com/details?id=com.nanoha.MyLockScreen_full</string>
    <string name="eran_point">Free download and install to earn points</string>
    <string name="current_point">Current Points</string>
    <string name="spend_point">Consume 220 points to remove limit</string>
    <string name="remove_ad">Thank you for your support.Please do not delete the file named ripplelock.key in the SD card.</string>
    <string name="display_setting">Display setting</string>
    <string name="display_quickview">Display shortcuts</string>
    <string name="shortcut_setting">Shortcuts setting</string>
    <string name="date_format_setting">Date format setting</string>
    <string name="left_shortcut_setting">Left shortcut setting</string>
    <string name="right_shortcut_setting">Right shortcut setting</string>
    <string name="top_shortcut_setting">Top shortcut setting</string>
    <string name="bottom_shortcut_setting">Bottom shortcut setting</string>
    <string name="left_shortcut_icon_setting">Left shortcut icon setting</string>
    <string name="right_shortcut_icon_setting">Right shortcut icon setting</string>
    <string name="top_shortcut_icon_setting">Top shortcut icon setting</string>
    <string name="bottom_shortcut_icon_setting">Bottom shortcut icon setting</string>
    <string name="filter_app_hint">Filter Applications</string>
    <string name="display_mute_icon">Display vibrate icon</string>
    <string name="display_music_control">Display music control</string>
    <string name="password_setting">Password setting</string>
    <string name="only_display_lock_circle">Only display lock circle</string>
    <string name="fix_double_lock_issue">Fix double lock issue</string>
    <string name="background_alpha_setting">Background alpha setting</string>
    <string name="alpha_limit">Limit 0-200(Default:0)</string>
    <string name="use_password">Use password</string>
    <string name="bootup_auto_execute">Auto execute after bootup</string>
    <string name="fix_power_button_issue">Fix power button issue(for CM7)</string>
    <string name="select_music_player">Select music player</string>
    <string name="email_to_me">Email to developer</string>
    <string name="add_widget">Add widget to lockscreen</string>
    <string name="double_lock_issue">Double lock issue</string>
    <string name="use_system_security_lock">Use system security lock</string>
    <string name="use_call_button">Use \"answer call button\"</string>
    <string name="enable_widget_click">Enable widget click</string>
    <string name="widget_setting">Widget Setting</string>
    <string name="display_time">Display time</string>
    <string name="display_date">Display date</string>
    <string name="display_status">Display power/alarm message</string>
    <string name="screen_lock_sound">Screen lock sounds</string>
    <string name="screen_lock_sound_summary">Play sounds when locking and unlocking the screen</string>
    <string name="screen_timeout">Screen time-out</string>
    <string name="screen_timeout_summary">Adjust the delay before the screen automatically turns off</string>
    <string name="delay_lock">Delay Lock</string>
    <string name="delay_lock_summary">How long lock screen after screen off</string>
    <string name="next_label">Next</string>
    <string name="home_widzard_title">Ripple lock setting</string>
    <string name="home_widzard_desc">First you need to clear the default settings of home screen, then choose the \"Ripple lock\" as the default home screen , this will not replace your existing home screen, when you press Home key, it will automatically launch your preferred home screen. \10 You can always use the \"Block HOME key wizard\" setting item to enter this wizard. \10\101. When you click \"Next\" button, you will enter the application details screen for current default home app. Please click the \"Clear defaults\" button. \102.Then press the HOME key, at the pop-up dialog, click the checkbox at the bottom and choose the \"Ripple Lock\" to continue.</string>
    <string name="block_home_setting">Block HOME key wizard</string>
    <string name="use_call_button_desc">Does not answer the phone or hang up the phone, just jump to the default phone screen.</string>
    <string name="ring_theme">Ring theme setting</string>
    <string name="feedback">Feedback</string>
    <string name="smart_clock_setting">Smart Clock widget setting</string>
    <string name="display_chargeinfo">Display charge info</string>
    <string name="display_alarm">Display alarm</string>
    <string name="color_setting">Color setting</string>
    <string name="chargeinfo_color">Charge info color</string>
    <string name="alarm_color">Alarm color</string>
    <string name="overall_setting">Overall setting</string>
    <string name="widget_click_action">Widget Click Action</string>
    <string name="use_24_hour">Use 24-hour format</string>
    <string name="date_format">Date Format</string>
    <string name="ampm_size">AM/PM font size</string>
    <string name="chargeinfo_size">Charge info font size</string>
    <string name="alarm_size">Alarm font size</string>
    <string name="how_to_use">How to use?</string>
</resources>