<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tabunlock="http://schemas.android.com/apk/res/com.android.tabunlock" android:title="@string/settings" android:key="main_setting">
    <PreferenceCategory android:title="@string/font_setting"/>
    <ListPreference android:entries="@array/fontstyle_entries" android:title="@string/font_style" android:key="font_style" android:entryValues="@array/fontstyle_values"/>
    <Preference android:title="@string/font_size" android:key="font_size"/>
    <Preference android:title="@string/font_color" android:key="font_color"/>
    <PreferenceCategory android:title="@string/background_setting"/>
    <ListPreference android:entries="@array/background_entries" android:title="@string/background_setting" android:key="background_setting" android:summary="@string/background_setting_summary" android:entryValues="@array/background_values"/>
    <EditTextPreference android:title="@string/background_alpha_setting" android:key="background_alpha_setting" android:summary="@string/alpha_limit"/>
    <PreferenceCategory android:title="@string/password_setting"/>
    <CheckBoxPreference android:title="@string/use_password" android:key="use_password"/>
    <Preference android:title="@string/password_setting" android:key="password_setting"/>
    <PreferenceCategory android:title="@string/other_setting"/>
    <Preference android:title="@string/shortcut_setting" android:key="shortcut_setting"/>
    <Preference android:title="@string/add_widget" android:key="add_widget"/>
    <ListPreference android:entries="@array/music_player_entrier" android:title="@string/select_music_player" android:key="music_control" android:entryValues="@array/music_player_values"/>
    <ListPreference android:entries="@array/screen_orientation_entries" android:title="@string/screen_orientation" android:key="screen_orientation" android:entryValues="@array/screen_orientation_values"/>
    <ListPreference android:entries="@array/finish_anim_entries" android:title="@string/unlock_anim" android:key="unlock_anim" android:entryValues="@array/finish_anim_values"/>
    <ListPreference android:entries="@array/data_formate_entries" android:title="@string/date_format_setting" android:key="date_format" android:entryValues="@array/data_formate_values"/>
    <CheckBoxPreference android:title="@string/use_call_button" android:key="use_call_button"/>
    <PreferenceCategory android:title="@string/double_lock_issue"/>
    <CheckBoxPreference android:title="@string/use_system_security_lock" android:key="use_system_security_lock"/>
    <ListPreference android:entries="@array/doublelock_issue_entries" android:title="@string/fix_double_lock_issue" android:key="fix_double_lock_issue" android:entryValues="@array/doublelock_issue_values"/>
    <PreferenceCategory android:title="@string/display_setting"/>
    <CheckBoxPreference android:title="@string/display_mute_icon" android:key="display_mute_icon"/>
    <CheckBoxPreference android:title="@string/display_music_control" android:key="display_music_control"/>
    <CheckBoxPreference android:title="@string/display_carrier" android:key="display_carrier"/>
    <CheckBoxPreference android:title="@string/display_statusbar" android:key="display_statusbar"/>
    <CheckBoxPreference android:title="@string/display_lock_icon" android:key="display_lock_icon"/>
    <CheckBoxPreference android:title="@string/only_display_lock_circle" android:key="only_display_lock_circle"/>
    <CheckBoxPreference android:title="@string/unlock_vibrate" android:key="unlock_vibrate"/>
    <CheckBoxPreference android:title="@string/disable_statusbar" android:key="disable_statusbar"/>
    <CheckBoxPreference android:title="@string/always_display_battery" android:key="always_display_battery"/>
    <CheckBoxPreference android:title="@string/bootup_auto_execute" android:key="bootup_auto_execute"/>
    <CheckBoxPreference android:title="@string/fix_power_button_issue" android:key="fix_power_button_issue"/>
</PreferenceScreen>
