<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tabunlock="http://schemas.android.com/apk/res/com.android.tabunlock" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:id="@+id/hello_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hello"/>
        <LinearLayout android:orientation="horizontal" android:id="@+id/control_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/contorlButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop_lockscreen" android:layout_weight="1"/>
            <Button android:id="@+id/settinglButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings" android:layout_weight="1"/>
        </LinearLayout>
        <Button android:id="@+id/email_to_me" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/email_to_me"/>
        <Button android:id="@+id/feedback" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/feedback"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/adLayout" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="50dp">
                <LinearLayout android:gravity="center_horizontal" android:id="@+id/AdLinearLayout" android:layout_width="match_parent" android:layout_height="50dp"/>
                <LinearLayout android:id="@+id/ad_cover" android:background="#00000000" android:layout_width="match_parent" android:layout_height="50dp"/>
            </RelativeLayout>
            <TextView android:gravity="center" android:id="@+id/PointsTextView" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content"/>
            <Button android:id="@+id/buy_app_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/buy_app"/>
            <Button android:id="@+id/SpendPointsButton" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/spend_point"/>
            <Button android:id="@+id/OffersButton" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/eran_point"/>
            <Button android:id="@+id/PointsButton" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/current_point"/>
        </LinearLayout>
        <TextView android:id="@+id/remov_ad_text" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/remove_ad"/>
    </LinearLayout>
</ScrollView>
