<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tabunlock="http://schemas.android.com/apk/res/com.android.tabunlock" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="left" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <TextView android:textSize="30dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/home_widzard_title"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/home_widzard_desc"/>
    </LinearLayout>
    <RelativeLayout android:background="@android:drawable/bottom_bar" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:id="@+id/next_button" android:layout_width="150dp" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/next_label" android:drawableRight="@drawable/ic_btn_next" android:drawablePadding="10dp" android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
